Took off the font, I think the compiler's just ignoring that statement as I can't see any difference between the two fonts. Also centred the top text view, the bottom text view's still on the right. Centre cropped the image view so it created a bleed effect.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,36 +6,32 @@
     android:layout_height="match_parent"
     tools:context="com.example.danny.happybirthday.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
-        android:padding="10dp"
-        android:text="@string/message"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textSize="36sp"
-        android:fontFamily="sans-serif-light"
-        android:textColor="@android:color/white" />
-
     <ImageView android:src="@drawable/androidparty"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
         android:layout_centerInParent="true"
+        android:scaleType="centerCrop"
         tools:ignore="ContentDescription" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:background="@color/colorAccent"
+        android:text="@string/message"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="36sp"
+        android:textColor="@android:color/white" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
         android:text="@string/signature"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:textSize="36sp"
-        android:fontFamily="sans-serif-light"
         android:textColor="@android:color/white" />
 
 </RelativeLayout>
